tests/specs/test/exit_code2/main.js
Deno.test("Deno.exitCode", () => {
  Deno.exitCode = 5;
  throw new Error("");
});

Deno.test("success", () => {
});
